--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
+    "serve-favicon": "^2.3.0",
+    "should": "^11.1.0",
     "superagent": "^2.2.0"
   },
   "devDependencies": {
