error handling traces works only in dev env

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.2",
+    "errorhandler": "^1.4.3",
     "expect.js": "^0.3.1",
     "express": "^4.14.0",
     "jwt-simple": "^0.5.0",
