--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "test-storage",
-    "version": "0.1.14",
+    "version": "0.1.20",
     "description": "Test Case Management System",
     "main": "app.js",
     "private": true,
     "scripts": {
         "prestart": "versiony package.json --patch",
-        "start": "NODE_ENV=development nodemon app.js",
-        "test": "./node_modules/.bin/mocha ./test/ --recursive"
+        "start": "NODE_ENV=development forever start -c nodemon app.js --exitcrash",
+        "test": "./node_modules/.bin/mocha ./test/ --recursive --check-leaks"
     },
     "keywords": [],
     "author": "Dmitry Zakharov",
@@ -29,6 +29,7 @@
         "superagent": "^2.2.0"
     },
     "devDependencies": {
+        "forever": "^0.15.2",
         "nodemon": "^1.10.2",
         "supertest": "^2.0.0",
         "versiony-cli": "^1.3.0"
