--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,10 @@
+# AppVeyor file
+# http://www.appveyor.com/docs/appveyor-yml
+
+# Build version format
+version: "{build}"
+
+# Test against this version of Node.js
 environment:
   matrix:
     - nodejs_version: "4.0"
@@ -5,14 +12,25 @@ environment:
     - nodejs_version: "5.11"
     - nodejs_version: "6.0"
     - nodejs_version: "6.1"
+
+build: off
+
+# Fix line endings on Windows
+init:
+  - git config --global core.autocrlf true
+
 install:
   - ps: Install-Product node $env:nodejs_version
   - npm install
+
 services:
   - mongodb
-build: off
+
 test_script:
-  - node --version
-  - npm --version
+  # Output useful info for debugging.
+  - node --version && npm --version
+  # Run tests
   - npm test
+
+cache: node_modules
 
