--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "test-storage",
-    "version": "0.1.34",
+    "version": "0.1.35",
     "description": "Test Case Management System",
     "main": "app.js",
     "private": true,
     "scripts": {
-        "start": "NODE_ENV=development nodemon app.js --exitcrash",
+        "start": "NODE_ENV=development concurrently \"tsc -w -p ./client\" \"nodemon app.js --exitcrash\" ",
         "version": "versiony package.json --patch",
         "test": "./node_modules/.bin/mocha ./test/ --recursive --check-leaks",
         "postinstall": "typings install",
@@ -24,25 +24,26 @@
         "url": "https://github.com/pumano/test-storage/issues"
     },
     "dependencies": {
-        "@angular/common": "^2.0.1",
-        "@angular/compiler": "^2.0.1",
-        "@angular/core": "^2.0.1",
-        "@angular/forms": "^2.0.1",
-        "@angular/http": "^2.0.1",
-        "@angular/platform-browser": "^2.0.1",
-        "@angular/platform-browser-dynamic": "^2.0.1",
-        "@angular/upgrade": "^2.0.1",
-        "angular-in-memory-web-api": "^0.1.1",
-        "angular2-jwt": "^0.1.23",
+        "@angular/common": "^2.0.2",
+        "@angular/compiler": "^2.0.2",
+        "@angular/core": "^2.0.2",
+        "@angular/forms": "^2.0.2",
+        "@angular/http": "^2.0.2",
+        "@angular/platform-browser": "^2.0.2",
+        "@angular/platform-browser-dynamic": "^2.0.2",
+        "@angular/upgrade": "^2.0.2",
+        "angular-in-memory-web-api": "^0.1.6",
+        "angular2-jwt": "^0.1.24",
         "body-parser": "^1.15.2",
         "cookie-parser": "^1.4.3",
         "core-js": "^2.4.1",
         "errorhandler": "^1.4.3",
+        "es6-shim": "^0.35.1",
         "express": "^4.14.0",
         "express-validator": "^2.20.10",
         "jwt-simple": "^0.5.0",
         "method-override": "^2.3.6",
-        "mongoose": "^4.6.1",
+        "mongoose": "^4.6.3",
         "morgan": "^1.7.0",
         "path": "^0.12.7",
         "reflect-metadata": "^0.1.8",
@@ -54,14 +55,15 @@
     "devDependencies": {
         "bluebird": "^3.4.6",
         "chai": "^3.5.0",
+        "concurrently": "^3.1.0",
         "expect.js": "^0.3.1",
         "factory-girl": "^4.0.0-beta.4",
         "faker": "^3.1.0",
         "forever": "^0.15.2",
-        "mocha": "^3.0.2",
+        "mocha": "^3.1.1",
         "mockgoose": "^6.0.8",
-        "nodemon": "^1.10.2",
-        "should": "^11.1.0",
+        "nodemon": "^1.11.0",
+        "should": "^11.1.1",
         "superagent": "^2.3.0",
         "supertest": "^2.0.0",
         "typescript": "^2.0.3",
