--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-beta.12",
+    "rxjs": "^5.0.0-rc.1",
     "serve-favicon": "^2.3.0",
     "systemjs": "^0.19.39",
     "zone.js": "^0.6.25"
@@ -62,7 +62,7 @@
     "factory-girl": "^4.0.0-beta.4",
     "faker": "^3.1.0",
     "forever": "^0.15.2",
-    "mocha": "^3.1.1",
+    "mocha": "^3.1.2",
     "mockgoose": "^6.0.8",
     "nodemon": "^1.11.0",
     "should": "^11.1.1",
