--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "bluebird": "^3.4.6",
     "chai": "^3.5.0",
+    "codelyzer": "^1.0.0-beta.1",
     "concurrently": "^3.1.0",
     "expect.js": "^0.3.1",
     "factory-girl": "^4.0.0-beta.4",
@@ -72,6 +73,7 @@
     "tslint": "^3.15.1",
     "typescript": "^2.0.3",
     "typings": "^1.4.0",
-    "versiony-cli": "^1.3.0"
+    "versiony-cli": "^1.3.0",
+    "yargs": "^6.0.0"
   }
 }
