--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,16 +1,24 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "module": "system",
+        "module": "commonjs",
         "moduleResolution": "node",
         "sourceMap": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "removeComments": false,
         "noImplicitAny": false,
-        "suppressImplicitAnyIndexErrors": true
+        "suppressImplicitAnyIndexErrors": true,
+        "typeRoots": [
+      "../node_modules/@types"
+    ],
+    "types" : [
+      "core-js"
+    ]
     },
     "exclude": [
-      "../node_modules"
-    ]
+    "../node_modules",
+    "../typings/main",
+    "../typings/main.d.ts"
+  ]
 }
