--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "forever": "NODE_ENV=development concurrently \"tsc -w -p ./client\" \"forever start -c nodemon app.js --exitcrash\" ",
     "version": "versiony package.json --patch",
     "test": "./node_modules/.bin/mocha ./test/ --recursive --check-leaks",
-    "postinstall": "typings install",
+    "postinstall": "typings install && tsc -w -p ./client",
     "typings": "typings",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
@@ -55,6 +55,7 @@
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
+    "@types/core-js": "^0.9.34",
     "bluebird": "^3.4.6",
     "chai": "^3.5.0",
     "codelyzer": "^1.0.0-beta.1",
