typings and package update

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "app.js",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=development concurrently \"tsc -w -p ./client\" \"nodemon app.js --exitcrash\" ",
-    "forever": "NODE_ENV=development concurrently \"tsc -w -p ./client\" \"forever start -c nodemon app.js --exitcrash\" ",
+    "prestart": "npm run env NODE_ENV=development",
+    "start": "concurrently \"tsc -w -p ./client\" \"nodemon app.js --exitcrash\" ",
+    "forever": "concurrently \"tsc -w -p ./client\" \"forever start -c nodemon app.js --exitcrash\" ",
     "version": "versiony package.json --patch",
     "test": "./node_modules/.bin/mocha ./test/ --recursive --check-leaks",
-    "postinstall": "typings install",
+    "postinstall": "./node_modules/.bin/typings install",
     "typings": "typings",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
@@ -40,7 +41,6 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "errorhandler": "^1.4.3",
-    "es6-shim": "^0.35.1",
     "express": "^4.14.0",
     "express-validator": "^2.20.10",
     "jwt-simple": "^0.5.0",
