--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@angular/platform-browser-dynamic": "^2.1.0",
     "@angular/upgrade": "^2.1.0",
     "angular-in-memory-web-api": "^0.1.7",
-    "angular2-jwt": "^0.1.24",
+    "angular2-jwt": "^0.1.22",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
@@ -50,7 +50,7 @@
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-rc.1",
+    "rxjs": "5.0.0-beta.12",
     "serve-favicon": "^2.3.0",
     "systemjs": "^0.19.39",
     "zone.js": "^0.6.25"
