--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,24 +1,23 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "removeComments": false,
-        "noImplicitAny": false,
-        "suppressImplicitAnyIndexErrors": true,
-        "typeRoots": [
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "removeComments": false,
+    "noImplicitAny": false,
+    "suppressImplicitAnyIndexErrors": true,
+    "typeRoots": [
       "../node_modules/@types"
     ],
-    "types" : [
+    "types": [
+      "node",
       "core-js"
     ]
-    },
-    "exclude": [
-    "../node_modules",
-    "../typings/main",
-    "../typings/main.d.ts"
+  },
+  "exclude": [
+    "../node_modules"
   ]
 }
