--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "@angular/http": "^2.1.0",
     "@angular/platform-browser": "^2.1.0",
     "@angular/platform-browser-dynamic": "^2.1.0",
+    "@angular/router": "^3.1.0",
     "@angular/upgrade": "^2.1.0",
     "angular-in-memory-web-api": "^0.1.7",
-    "angular2-jwt": "^0.1.22",
+    "angular2-jwt": "^0.1.24",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
@@ -46,17 +47,18 @@
     "express-validator": "^2.20.10",
     "jwt-simple": "^0.5.0",
     "method-override": "^2.3.6",
-    "mongoose": "^4.6.3",
+    "mongoose": "^4.6.4",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "serve-favicon": "^2.3.0",
     "systemjs": "^0.19.39",
-    "zone.js": "^0.6.25"
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
+    "@types/node": "^6.0.45",
     "bluebird": "^3.4.6",
     "chai": "^3.5.0",
     "codelyzer": "^1.0.0-beta.2",
@@ -76,6 +78,6 @@
     "typescript": "^2.0.3",
     "typings": "^1.4.0",
     "versiony-cli": "^1.3.0",
-    "yargs": "^6.0.0"
+    "yargs": "^6.2.0"
   }
 }
