--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,8 @@ init:
 
 install:
   - ps: Install-Product node $env:nodejs_version
-  - npm install
+  - npm install yarn
+  - ./node_modules/.bin/yarn install
 
 services:
   - mongodb
