--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,8 +21,7 @@ init:
 
 install:
   - ps: Install-Product node $env:nodejs_version
-  - npm install yarn
-  - ./node_modules/.bin/yarn install
+  - npm install
 
 services:
   - mongodb
