--- a/package.json
+++ b/package.json
@@ -27,43 +27,43 @@
     "url": "https://github.com/pumano/test-storage/issues"
   },
   "dependencies": {
-    "@angular/common": "^2.1.2",
-    "@angular/compiler": "^2.1.2",
-    "@angular/core": "^2.1.2",
-    "@angular/forms": "^2.1.2",
-    "@angular/http": "^2.1.2",
-    "@angular/platform-browser": "^2.1.2",
-    "@angular/platform-browser-dynamic": "^2.1.2",
-    "@angular/router": "^3.1.2",
-    "@angular/upgrade": "^2.1.2",
-    "angular-in-memory-web-api": "^0.1.14",
+    "@angular/common": "^2.2.1",
+    "@angular/compiler": "^2.2.1",
+    "@angular/core": "^2.2.1",
+    "@angular/forms": "^2.2.1",
+    "@angular/http": "^2.2.1",
+    "@angular/platform-browser": "^2.2.1",
+    "@angular/platform-browser-dynamic": "^2.2.1",
+    "@angular/router": "^3.2.1",
+    "@angular/upgrade": "^2.2.1",
+    "angular-in-memory-web-api": "^0.1.15",
     "angular2-jwt": "^0.1.25",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
-    "errorhandler": "^1.4.3",
+    "errorhandler": "^1.5.0",
     "express": "^4.14.0",
     "express-validator": "^2.21.0",
     "jwt-simple": "^0.5.0",
     "method-override": "^2.3.6",
-    "mongoose": "^4.6.7",
+    "mongoose": "^4.6.8",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
-    "serve-favicon": "^2.3.0",
+    "serve-favicon": "^2.3.2",
     "systemjs": "^0.19.41",
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
     "@types/es6-promise": "0.0.32",
-    "@types/node": "^6.0.46",
+    "@types/node": "^6.0.48",
     "@types/selenium-webdriver": "^2.53.35",
     "bluebird": "^3.4.6",
     "chai": "^3.5.0",
-    "codelyzer": "^1.0.0-beta.3",
+    "codelyzer": "^1.0.0-beta.4",
     "concurrently": "^3.1.0",
     "expect.js": "^0.3.1",
     "factory-girl": "^4.0.0-beta.7",
@@ -77,10 +77,11 @@
     "supertest": "^2.0.1",
     "systemjs-builder": "^0.15.34",
     "tslint": "^3.15.1",
-    "typescript": "^2.0.9",
+    "typescript": "^2.0.10",
     "typings": "^2.0.0",
     "versiony-cli": "^1.3.0",
-    "yargs": "^6.3.0",
-    "yarn": "^0.16.1"
+    "webpack": "^1.13.3",
+    "yargs": "^6.4.0",
+    "yarn": "^0.17.6"
   }
 }
