--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "forever": "concurrently \"tsc -w -p ./client\" \"forever start -c nodemon app.js --exitcrash\" ",
     "version": "versiony package.json --patch",
     "test": "./node_modules/.bin/mocha ./test/ --recursive --check-leaks",
+    "webdriverupdate": "./node_modules/.bin/webdriver-manager update",
+    "webdriverstart": "./node_modules/.bin/webdriver-manager start",
+    "protractor": "protractor protractor.conf.js --suite all",
     "postinstall": "./node_modules/.bin/typings install",
     "typings": "typings",
     "tsc": "tsc",
@@ -44,9 +47,10 @@
     "core-js": "^2.4.1",
     "errorhandler": "^1.5.0",
     "express": "^4.14.0",
-    "express-validator": "^2.21.0",
+    "express-validator": "^3.0.0",
     "jwt-simple": "^0.5.1",
     "method-override": "^2.3.7",
+    "mocha": "^3.2.0",
     "mongoose": "^4.7.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
@@ -54,22 +58,30 @@
     "rxjs": "5.0.0-beta.12",
     "serve-favicon": "^2.3.2",
     "systemjs": "^0.19.41",
+    "yarn": "^0.17.9",
     "zone.js": "^0.6.21"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/chai-as-promised": "0.0.29",
     "@types/core-js": "^0.9.34",
     "@types/es6-promise": "0.0.32",
+    "@types/mocha": "^2.2.33",
     "@types/node": "^6.0.51",
     "@types/selenium-webdriver": "^2.53.35",
-    "bluebird": "^3.4.6",
+    "@types/should": "^8.1.30",
+    "@types/should-promised": "0.0.27",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "codelyzer": "^1.0.0-beta.4",
     "concurrently": "^3.1.0",
     "factory-girl": "^4.0.0-beta.7",
     "faker": "^3.1.0",
     "forever": "^0.15.3",
-    "mocha": "^3.1.2",
+    "mocha": "^3.2.0",
     "mockgoose": "^6.0.8",
     "nodemon": "^1.11.0",
+    "protractor": "^4.0.11",
     "should": "^11.1.1",
     "supertest": "^2.0.1",
     "systemjs-builder": "^0.15.34",
@@ -79,6 +91,6 @@
     "versiony-cli": "^1.3.0",
     "webpack": "^1.13.3",
     "yargs": "^6.4.0",
-    "yarn": "^0.17.8"
+    "yarn": "^0.17.9"
   }
 }
