--- a/package.json
+++ b/package.json
@@ -48,11 +48,14 @@
     "errorhandler": "^1.5.0",
     "express": "^4.14.0",
     "express-validator": "^3.0.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.1.1",
     "jwt-simple": "^0.5.1",
     "method-override": "^2.3.7",
     "mocha": "^3.2.0",
     "mongoose": "^4.7.0",
     "morgan": "^1.7.0",
+    "normalize-css": "^2.3.1",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
@@ -73,7 +76,7 @@
     "@types/should-promised": "0.0.27",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "codelyzer": "^1.0.0-beta.4",
+    "codelyzer": "^2.0.0-beta.1",
     "concurrently": "^3.1.0",
     "factory-girl": "^4.0.0-beta.7",
     "faker": "^3.1.0",
