test protractor setup for travis

--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "scripts": {
     "prestart": "npm run env NODE_ENV=development",
     "start": "concurrently \"tsc -w -p ./client\" \"nodemon app.js --exitcrash\" ",
+    "prestarttest": "concurrently \"tsc -p ./client\" \"tsc -p ./test\" ",
+    "starttest": "nodemon app.js --exitcrash",
     "forever": "concurrently \"tsc -w -p ./client\" \"forever start -c nodemon app.js --exitcrash\" ",
     "version": "versiony package.json --patch",
-    "test": "./node_modules/.bin/mocha ./test/ --recursive --check-leaks",
+    "test": "./node_modules/.bin/mocha ./test/server/ --recursive --check-leaks & npm run protractor",
     "webdriverupdate": "./node_modules/.bin/webdriver-manager update",
     "webdriverstart": "./node_modules/.bin/webdriver-manager start",
-    "protractor": "protractor protractor.conf.js --suite all",
+    "preprotractor": "cd .. && tsc -p ./test-storage && cd test-storage",
+    "protractor": "npm run preprotractor && sleep 5 & npm run prestarttest & sleep 10 & npm run starttest & sleep 10 && protractor protractor.conf.js --suite all",
     "postinstall": "./node_modules/.bin/typings install",
     "typings": "typings",
     "tsc": "tsc",
@@ -30,15 +33,15 @@
     "url": "https://github.com/pumano/test-storage/issues"
   },
   "dependencies": {
-    "@angular/common": "^2.2.3",
-    "@angular/compiler": "^2.2.3",
-    "@angular/core": "^2.2.3",
-    "@angular/forms": "^2.2.3",
-    "@angular/http": "^2.2.3",
-    "@angular/platform-browser": "^2.2.3",
-    "@angular/platform-browser-dynamic": "^2.2.3",
-    "@angular/router": "^3.2.3",
-    "@angular/upgrade": "^2.2.3",
+    "@angular/common": "^2.2.4",
+    "@angular/compiler": "^2.2.4",
+    "@angular/core": "^2.2.4",
+    "@angular/forms": "^2.2.4",
+    "@angular/http": "^2.2.4",
+    "@angular/platform-browser": "^2.2.4",
+    "@angular/platform-browser-dynamic": "^2.2.4",
+    "@angular/router": "^3.2.4",
+    "@angular/upgrade": "^2.2.4",
     "angular-in-memory-web-api": "^0.1.16",
     "angular2-jwt": "^0.1.25",
     "body-parser": "^1.15.2",
@@ -53,7 +56,7 @@
     "jwt-simple": "^0.5.1",
     "method-override": "^2.3.7",
     "mocha": "^3.2.0",
-    "mongoose": "^4.7.0",
+    "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
     "normalize-css": "^2.3.1",
     "path": "^0.12.7",
@@ -67,11 +70,11 @@
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/chai-as-promised": "0.0.29",
-    "@types/core-js": "^0.9.34",
+    "@types/core-js": "^0.9.35",
     "@types/es6-promise": "0.0.32",
     "@types/mocha": "^2.2.33",
     "@types/node": "^6.0.51",
-    "@types/selenium-webdriver": "^2.53.35",
+    "@types/protractor": "^4.0.0",
     "@types/should": "^8.1.30",
     "@types/should-promised": "0.0.27",
     "chai": "^3.5.0",
