--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,14 @@ language: node_js
 node_js:
   - "6.9"
   - "7"
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start" 
+  - 'node_modules/protractor/bin/webdriver-manager update'
+  - 'node_modules/protractor/bin/webdriver-manager start 2>&1 &'  
+  - sleep 3
 install:
-- npm install yarn
-- ./node_modules/.bin/yarn install
+  - npm install yarn
+  - ./node_modules/.bin/yarn install
 services:
   - mongodb
