--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "test": "./node_modules/.bin/mocha ./test/server/ --recursive --check-leaks & npm run protractor",
     "webdriverupdate": "./node_modules/.bin/webdriver-manager update",
     "webdriverstart": "./node_modules/.bin/webdriver-manager start",
-    "preprotractor": "cd .. && tsc -p ./test-storage && cd test-storage",
-    "protractor": "npm run preprotractor && sleep 5 & npm run prestarttest & sleep 10 & npm run starttest & sleep 10 && protractor protractor.conf.js --suite all",
+    "protractor": "npm run prestarttest & sleep 10 & npm run starttest & sleep 10 && protractor ./test/protractor.conf.js --suite all",
     "postinstall": "./node_modules/.bin/typings install",
     "typings": "typings",
     "tsc": "tsc",
