--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start" 
-  - 'node_modules/protractor/bin/webdriver-manager update'
+  - 'node_modules/protractor/bin/webdriver-manager update &'
   - 'node_modules/protractor/bin/webdriver-manager start 2>&1 &'  
   - sleep 3
 install:
