--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ node_js:
   - "6.9"
   - "7"
 before_script:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start" 
+  - sleep 3
   - 'node_modules/protractor/bin/webdriver-manager update &'
   - sleep 10
   - 'node_modules/protractor/bin/webdriver-manager start 2>&1 &'  
