test plans added

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "starttest": "nodemon app.js --exitcrash",
     "forever": "concurrently \"tsc -w -p ./client\" \"forever start -c nodemon app.js --exitcrash\" ",
     "testserver": "./node_modules/.bin/mocha ./test/server/ --recursive --check-leaks",
-    "test": "./node_modules/.bin/mocha ./test/server/ --recursive --check-leaks & npm run protractor",
+    "test": "./node_modules/.bin/mocha ./test/server/ --recursive --check-leaks",
     "webdriverupdate": "./node_modules/.bin/webdriver-manager update",
     "webdriverstart": "./node_modules/.bin/webdriver-manager start",
     "protractor": "npm run prestarttest & sleep 10 & npm run starttest & sleep 10 && protractor ./test/protractor.conf.js --suite all",
@@ -60,7 +60,7 @@
     "normalize-css": "^2.3.1",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-rc.5",
+    "rxjs": "5.0.1",
     "serve-favicon": "^2.3.2",
     "systemjs": "^0.19.41",
     "yarn": "^0.17.10",
