node env vars for prod/dev/test

--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "app.js",
   "private": true,
   "scripts": {
-    "prestart": "npm run env NODE_ENV=development",
+    "prestart": "npm run env NODE_ENV=production",
     "start": "concurrently \"tsc -w -p ./client\" \"nodemon app.js --exitcrash\" ",
+    "prestartdev": "npm run env NODE_ENV=development",
+    "startdev": "concurrently \"tsc -w -p ./client\" \"nodemon app.js --exitcrash\" ",
     "prestarttest": "concurrently \"tsc -p ./client\" \"tsc -p ./test\" ",
     "starttest": "nodemon app.js --exitcrash",
     "forever": "concurrently \"tsc -w -p ./client\" \"forever start -c nodemon app.js --exitcrash\" ",
     "testserver": "./node_modules/.bin/mocha ./test/server/ --recursive --check-leaks",
+    "pretest": "npm run env NODE_ENV=test",
     "test": "./node_modules/.bin/mocha ./test/server/ --recursive --check-leaks",
     "webdriverupdate": "./node_modules/.bin/webdriver-manager update",
     "webdriverstart": "./node_modules/.bin/webdriver-manager start",
