--- a/package.json
+++ b/package.json
@@ -35,53 +35,54 @@
     "url": "https://github.com/pumano/test-storage/issues"
   },
   "dependencies": {
-    "@angular/common": "^2.3.0",
-    "@angular/compiler": "^2.3.0",
-    "@angular/core": "^2.3.0",
-    "@angular/forms": "^2.3.0",
-    "@angular/http": "^2.3.0",
-    "@angular/platform-browser": "^2.3.0",
-    "@angular/platform-browser-dynamic": "^2.3.0",
-    "@angular/router": "^3.3.0",
-    "@angular/upgrade": "^2.3.0",
-    "angular-in-memory-web-api": "^0.1.17",
-    "angular2-jwt": "^0.1.26",
-    "body-parser": "^1.15.2",
+    "@angular/common": "^2.4.4",
+    "@angular/compiler": "^2.4.4",
+    "@angular/core": "^2.4.4",
+    "@angular/forms": "^2.4.4",
+    "@angular/http": "^2.4.4",
+    "@angular/platform-browser": "^2.4.4",
+    "@angular/platform-browser-dynamic": "^2.4.4",
+    "@angular/router": "^3.4.4",
+    "@angular/upgrade": "^2.4.4",
+    "angular-in-memory-web-api": "^0.2.4",
+    "angular2-jwt": "^0.1.28",
+    "body-parser": "^1.16.0",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "errorhandler": "^1.5.0",
     "express": "^4.14.0",
-    "express-validator": "^3.0.0",
+    "express-validator": "^3.1.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "jwt-simple": "^0.5.1",
     "method-override": "^2.3.7",
     "mocha": "^3.2.0",
-    "mongoose": "^4.7.2",
+    "mongoose": "^4.7.8",
     "morgan": "^1.7.0",
     "normalize-css": "^2.3.1",
     "path": "^0.12.7",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.1",
+    "reflect-metadata": "^0.1.9",
+    "rxjs": "5.0.3",
     "serve-favicon": "^2.3.2",
-    "systemjs": "^0.19.41",
-    "yarn": "^0.17.10",
-    "zone.js": "^0.7.2"
+    "systemjs": "^0.20.0",
+    "yarn": "^0.19.1",
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/chai-as-promised": "0.0.29",
     "@types/core-js": "^0.9.35",
     "@types/es6-promise": "0.0.32",
-    "@types/mocha": "^2.2.33",
-    "@types/node": "^6.0.51",
+    "@types/mocha": "^2.2.38",
+    "@types/node": "^7.0.4",
     "@types/should": "^8.1.30",
     "@types/should-promised": "0.0.27",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "codelyzer": "^2.0.0-beta.3",
+    "codelyzer": "^2.0.0-beta.4",
     "concurrently": "^3.1.0",
+    "config": "^1.24.0",
     "database-updates": "^1.2.0",
     "factory-girl": "^4.0.0-beta.7",
     "faker": "^3.1.0",
@@ -89,16 +90,16 @@
     "mocha": "^3.2.0",
     "mockgoose": "^6.0.8",
     "nodemon": "^1.11.0",
-    "protractor": "^4.0.13",
+    "protractor": "^5.0.0",
     "should": "^11.1.2",
     "supertest": "^2.0.1",
-    "systemjs-builder": "^0.15.34",
-    "tslint": "^4.0.2",
-    "typescript": "^2.1.4",
-    "typings": "^2.0.0",
+    "systemjs-builder": "^0.16.0",
+    "tslint": "^4.3.1",
+    "typescript": "^2.1.5",
+    "typings": "^2.1.0",
     "versiony-cli": "^1.3.0",
     "webpack": "^1.14.0",
-    "yargs": "^6.5.0",
-    "yarn": "^0.17.10"
+    "yargs": "^6.6.0",
+    "yarn": "^0.19.1"
   }
 }
