--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "forever": "^0.15.3",
     "mocha": "^3.2.0",
     "mockgoose": "^6.0.8",
+    "multer": "^1.2.1",
     "nodemon": "^1.11.0",
     "protractor": "^5.0.0",
     "should": "^11.1.2",
