--- a/package.json
+++ b/package.json
@@ -32,70 +32,70 @@
     "url": "https://github.com/pumano/test-storage/issues"
   },
   "dependencies": {
-    "@angular/common": "^2.4.1",
-    "@angular/compiler": "^2.4.1",
-    "@angular/core": "^2.4.1",
-    "@angular/forms": "^2.4.1",
-    "@angular/http": "^2.4.1",
-    "@angular/platform-browser": "^2.4.1",
-    "@angular/platform-browser-dynamic": "^2.4.1",
-    "@angular/router": "^3.4.1",
-    "@angular/upgrade": "^2.4.1",
-    "angular-in-memory-web-api": "^0.2.3",
-    "angular2-jwt": "^0.1.27",
-    "body-parser": "^1.15.2",
+    "@angular/common": "^2.4.7",
+    "@angular/compiler": "^2.4.7",
+    "@angular/core": "^2.4.7",
+    "@angular/forms": "^2.4.7",
+    "@angular/http": "^2.4.7",
+    "@angular/platform-browser": "^2.4.7",
+    "@angular/platform-browser-dynamic": "^2.4.7",
+    "@angular/router": "^3.4.7",
+    "@angular/upgrade": "^2.4.7",
+    "angular-in-memory-web-api": "^0.2.4",
+    "angular2-jwt": "^0.1.28",
+    "body-parser": "^1.16.1",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "errorhandler": "^1.5.0",
-    "express": "^4.14.0",
+    "express": "^4.14.1",
     "express-validator": "^3.1.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "jwt-simple": "^0.5.1",
     "method-override": "^2.3.7",
     "mocha": "^3.2.0",
-    "mongoose": "^4.7.5",
-    "morgan": "^1.7.0",
+    "mongoose": "^4.8.2",
+    "morgan": "^1.8.1",
     "normalize-css": "^2.3.1",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.9",
-    "rxjs": "5.0.2",
+    "rxjs": "5.1.1",
     "serve-favicon": "^2.3.2",
-    "systemjs": "^0.19.41",
-    "yarn": "^0.18.1",
-    "zone.js": "^0.7.4"
+    "systemjs": "^0.20.7",
+    "yarn": "^0.20.3",
+    "zone.js": "^0.7.7"
   },
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/chai-as-promised": "0.0.29",
     "@types/core-js": "^0.9.35",
     "@types/es6-promise": "0.0.32",
-    "@types/mocha": "^2.2.35",
-    "@types/node": "^6.0.54",
+    "@types/mocha": "^2.2.39",
+    "@types/node": "^7.0.5",
     "@types/should": "^8.1.30",
     "@types/should-promised": "0.0.27",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "codelyzer": "^2.0.0-beta.4",
-    "concurrently": "^3.1.0",
+    "codelyzer": "^2.0.0",
+    "concurrently": "^3.3.0",
     "database-updates": "^1.2.0",
-    "factory-girl": "^4.0.0-beta.7",
+    "factory-girl": "^4.2.0",
     "faker": "^3.1.0",
     "forever": "^0.15.3",
     "mocha": "^3.2.0",
     "mockgoose": "^6.0.8",
     "nodemon": "^1.11.0",
-    "protractor": "^4.0.14",
+    "protractor": "^5.1.1",
     "should": "^11.1.2",
-    "supertest": "^2.0.1",
-    "systemjs-builder": "^0.15.34",
-    "tslint": "^4.2.0",
-    "typescript": "^2.1.4",
+    "supertest": "^3.0.0",
+    "systemjs-builder": "^0.16.3",
+    "tslint": "^4.4.2",
+    "typescript": "^2.1.6",
     "typings": "^2.1.0",
     "versiony-cli": "^1.3.0",
-    "webpack": "^1.14.0",
-    "yargs": "^6.5.0",
-    "yarn": "^0.18.1"
+    "webpack": "^2.2.1",
+    "yargs": "^6.6.0",
+    "yarn": "^0.20.3"
   }
 }
