--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
     "url": "https://github.com/pumano/test-storage/issues"
   },
   "dependencies": {
-    "@angular/common": "^2.4.8",
-    "@angular/compiler": "^2.4.8",
-    "@angular/core": "^2.4.8",
-    "@angular/forms": "^2.4.8",
-    "@angular/http": "^2.4.8",
-    "@angular/platform-browser": "^2.4.8",
-    "@angular/platform-browser-dynamic": "^2.4.8",
-    "@angular/router": "^3.4.8",
-    "@angular/upgrade": "^2.4.8",
-    "angular-in-memory-web-api": "^0.2.4",
+    "@angular/common": "^4.0.0-rc.1",
+    "@angular/compiler": "^4.0.0-rc.1",
+    "@angular/core": "^4.0.0-rc.1",
+    "@angular/forms": "^4.0.0-rc.1",
+    "@angular/http": "^4.0.0-rc.1",
+    "@angular/platform-browser": "^4.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^4.0.0-rc.1",
+    "@angular/router": "^4.0.0-rc.1",
+    "@angular/upgrade": "^4.0.0-rc.1",
+    "angular-in-memory-web-api": "^0.3.0",
     "angular2-jwt": "^0.1.28",
     "body-parser": "^1.16.1",
     "bootstrap": "^3.3.7",
@@ -57,15 +57,13 @@
     "jquery": "^3.1.1",
     "jwt-simple": "^0.5.1",
     "method-override": "^2.3.7",
-    "mocha": "^3.2.0",
-    "mongoose": "^4.8.2",
+    "mongoose": "^4.8.5",
     "morgan": "^1.8.1",
     "normalize-css": "^2.3.1",
-    "reflect-metadata": "^0.1.9",
-    "rxjs": "5.1.1",
-    "serve-favicon": "^2.3.2",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "5.2.0",
+    "serve-favicon": "^2.4.1",
     "systemjs": "^0.19.46",
-    "yarn": "^0.20.3",
     "zone.js": "^0.7.7"
   },
   "devDependencies": {
@@ -81,25 +79,25 @@
     "chai-as-promised": "^6.0.0",
     "codelyzer": "^2.0.0",
     "concurrently": "^3.3.0",
-    "config": "^1.24.0",
+    "config": "^1.25.1",
     "database-updates": "^1.2.0",
-    "factory-girl": "^4.2.0",
-    "faker": "^3.1.0",
+    "factory-girl": "^4.2.1",
+    "faker": "^4.1.0",
     "forever": "^0.15.3",
     "mocha": "^3.2.0",
-    "mockgoose": "^6.0.8",
-    "multer": "^1.2.1",
+    "mockgoose": "^7.0.0",
+    "multer": "^1.3.0",
     "nodemon": "^1.11.0",
     "protractor": "^5.1.1",
-    "should": "^11.1.2",
+    "should": "^11.2.0",
     "supertest": "^3.0.0",
     "systemjs-builder": "^0.16.3",
-    "tslint": "^4.4.2",
-    "typescript": "^2.1.6",
+    "tslint": "^4.5.1",
+    "typescript": "^2.2.1",
     "typings": "^2.1.0",
     "versiony-cli": "^1.3.0",
     "webpack": "^2.2.1",
     "yargs": "^6.6.0",
-    "yarn": "^0.20.3"
+    "yarn": "^0.21.3"
   }
 }
