--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,15 @@ node_js:
   - "7"
 before_script:
   - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start" 
+  - "sh -e /etc/init.d/xvfb start"
   - sleep 3
   - 'node_modules/protractor/bin/webdriver-manager update &'
   - sleep 10
-  - 'node_modules/protractor/bin/webdriver-manager start 2>&1 &'  
+  - 'node_modules/protractor/bin/webdriver-manager start 2>&1 &'
   - sleep 5
 
 install:
   - npm install yarn
-  - ./node_modules/.bin/yarn install
+  - ./node_modules/.bin/yarn
 services:
   - mongodb
