--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-storage",
-  "version": "0.4.41",
+  "version": "0.5.40",
   "description": "Test Case Management System",
   "main": "app.js",
   "private": true,
@@ -35,15 +35,15 @@
     "url": "https://github.com/pumano/test-storage/issues"
   },
   "dependencies": {
-    "@angular/common": "^4.0.0-rc.5",
-    "@angular/compiler": "^4.0.0-rc.5",
-    "@angular/core": "^4.0.0-rc.5",
-    "@angular/forms": "^4.0.0-rc.5",
-    "@angular/http": "^4.0.0-rc.5",
-    "@angular/platform-browser": "^4.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^4.0.0-rc.5",
-    "@angular/router": "^4.0.0-rc.5",
-    "@angular/upgrade": "^4.0.0-rc.5",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
+    "@angular/upgrade": "^4.0.0",
     "angular-in-memory-web-api": "^0.3.1",
     "angular2-jwt": "^0.1.28",
     "body-parser": "^1.17.1",
@@ -54,25 +54,25 @@
     "express": "^4.15.2",
     "express-validator": "^3.1.2",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.2.0",
+    "jquery": "^3.2.1",
     "jwt-simple": "^0.5.1",
-    "method-override": "^2.3.7",
+    "method-override": "^2.3.8",
     "mongoose": "^4.9.1",
     "morgan": "^1.8.1",
     "normalize-css": "^2.3.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "5.2.0",
-    "serve-favicon": "^2.4.1",
-    "systemjs": "^0.19.46",
-    "zone.js": "^0.8.4"
+    "serve-favicon": "^2.4.2",
+    "systemjs": "^0.19.47",
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "@types/chai": "^3.4.35",
     "@types/chai-as-promised": "0.0.30",
-    "@types/core-js": "^0.9.37",
+    "@types/core-js": "^0.9.39",
     "@types/es6-promise": "0.0.32",
     "@types/mocha": "^2.2.40",
-    "@types/node": "^7.0.8",
+    "@types/node": "^7.0.11",
     "@types/should": "^8.1.30",
     "@types/should-promised": "0.0.27",
     "chai": "^3.5.0",
@@ -85,7 +85,7 @@
     "faker": "^4.1.0",
     "forever": "^0.15.3",
     "mocha": "^3.2.0",
-    "mockgoose": "^7.0.6",
+    "mockgoose": "^7.0.7",
     "multer": "^1.3.0",
     "nodemon": "^1.11.0",
     "protractor": "^5.1.1",
@@ -96,7 +96,7 @@
     "typescript": "^2.2.1",
     "typings": "^2.1.0",
     "versiony-cli": "^1.3.0",
-    "webpack": "^2.2.1",
+    "webpack": "^2.3.2",
     "yargs": "^7.0.2",
     "yarn": "^0.21.3"
   }
