--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ services:
 
 before_test:
   - sleep 10
-  - echo 'db.addUser("admin", "admin");' | "C:\mongodb\bin\mongo" test-storage
+  - "C:\mongodb\bin\mongo" test-storage config/db-init.js
 
 test_script:
   # Output useful info for debugging.
