--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ services:
 
 before_test:
   - sleep 10
-  - "C:\mongodb\bin\mongo" test-storage config/db-init.js
+  - C:\mongodb\bin\mongo test-storage config/db-init.js
 
 test_script:
   # Output useful info for debugging.
