#31 status field added to testcase for approval process

--- a/docs/api-docs/api-doc.yaml
+++ b/docs/api-docs/api-doc.yaml
@@ -265,6 +265,8 @@ definitions:
       estimate:
         type: integer
         format: int32
+      status:
+        type: string
       childId:
         type: integer
         format: int32
@@ -364,6 +366,8 @@ definitions:
       estimate:
         type: integer
         format: int32
+      status:
+        type: string
       childId:
         type: integer
         format: int32
