--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,6 @@ before_script:
   - echo 'db.addUser("admin", "admin");' | mongo test-storage
 
 install:
-  - npm install yarn
-  - ./node_modules/.bin/yarn
+  - yarn
 services:
   - mongodb
