--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json && nodemon server.js --exitcrash",
+    "start": "concurrently \"ng serve --proxy-config proxy.conf.json\" \"nodemon server.js --exitcrash\" ",
     "lint": "ng lint",
     "test": "",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e",
     "build": "ng build && nodemon server.js --exitcrash",
-    "build:prod": "ng build --prod && nodemon server.js --exitcrash"
+    "build:prod": "ng build --prod --aot && nodemon server.js --exitcrash"
   },
   "dependencies": {
     "@angular/common": "^4.0.2",
