--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "concurrently \"ng serve --proxy-config proxy.conf.json\" \"nodemon server.js --exitcrash\" ",
+    "start": "ng build --prod && nodemon server.js --exitcrash",
+    "dev": "concurrently \"ng serve --proxy-config proxy.conf.json\" \"nodemon server.js --exitcrash\" ",
     "lint": "ng lint",
     "test": "",
     "pree2e": "webdriver-manager update",
@@ -35,6 +36,7 @@
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
+    "core-js": "^2.4.1",
     "errorhandler": "^1.5.0",
     "express": "^4.15.2",
     "express-validator": "^3.1.3",
@@ -45,8 +47,8 @@
     "mongoose": "^4.9.4",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
+    "ngx-bootstrap": "^1.6.6",
     "normalize-css": "^2.3.1",
-    "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "serve-favicon": "^2.4.2",
     "zone.js": "^0.8.4"
