backend tests migrated to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,19 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "types": [
+      "node",
+      "jasmine",
+      "mocha",
+      "supertest",
+      "should"
+    ],
     "lib": [
       "es2016",
       "dom"
     ]
-  }
+  },
+  "exclude": [
+    "./node_modules"
+  ]
 }
