--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-storage",
-  "version": "0.17.56",
+  "version": "0.17.57",
   "description": "Test Case Management System",
   "license": "GPLv3",
   "author": "Dmitry Zakharov",
@@ -15,21 +15,21 @@
   "scripts": {
     "ng": "ng",
     "start": "node ./dist/server/server.js",
-    "postinstall": "./node_modules/.bin/ng build --prod --aot && ./node_modules/.bin/tsc -p ./server",
+    "postinstall:heroku": "concurrently \" ./node_modules/.bin/ng build --prod --aot\" \" ./node_modules/.bin/tsc -p ./server\" ",
     "server:build": "tsc -p ./server && concurrently \"tsc -w -p ./server\" \"nodemon ./dist/server/server.js\" ",
     "client:build": "ng build --prod --aot",
     "dev": "concurrently \"npm run server:build \" \"ng serve --progress=false --proxy-config proxy.conf.json\"  ",
     "lint": "ng lint",
-    "test": "ng test --single-run",
+    "test": "ng test --single-run && npm run test:backend",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e",
-    "test:backend": "./node_modules/.bin/_mocha ./test/server/ --recursive --check-leaks",
+    "test:backend": "./node_modules/.bin/_mocha --compilers ts:ts-node/register ./test/server/**/*.spec.ts --recursive --check-leaks -t 50000",
     "build": "npm run client:build && npm run server:build",
     "build:prod": "ng build --prod --aot && nodemon server.js --exitcrash",
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
   },
   "dependencies": {
-    "@angular/cli": "1.0.4",
+    "@angular/cli": "1.0.6",
     "@angular/common": "^4.1.3",
     "@angular/compiler": "^4.1.3",
     "@angular/compiler-cli": "^4.1.3",
@@ -65,13 +65,20 @@
     "ngx-bootstrap": "^1.6.6",
     "nodemon": "^1.11.0",
     "normalize-css": "^2.3.1",
-    "typescript": "~2.3.2",
+    "typescript": "~2.3.3",
     "rxjs": "^5.4.0",
     "zone.js": "^0.8.11"
   },
   "devDependencies": {
     "@biesbjerg/ngx-translate-extract": "^2.3.1",
+    "@types/chai": "^3.5.2",
+    "@types/chai-http": "0.0.30",
     "@types/jasmine": "2.5.47",
+    "@types/mocha": "2.2.41",
+    "@types/should": "^8.3.0",
+    "@types/supertest": "^2.0.0",
+    "chai": "^4.0.0",
+    "chai-http": "^3.0.0",
     "codelyzer": "~3.0.1",
     "database-updates": "^1.2.0",
     "faker": "^4.1.0",
@@ -90,7 +97,6 @@
     "should": "^11.2.1",
     "supertest": "^3.0.0",
     "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.2"
+    "tslint": "~5.3.2"
   }
 }
