chore: bump packages version

--- a/package.json
+++ b/package.json
@@ -32,37 +32,37 @@
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
   },
   "dependencies": {
-    "@angular/animations": "^4.3.4",
-    "@angular/cli": "1.3.0",
-    "@angular/common": "^4.3.4",
-    "@angular/compiler": "^4.3.4",
-    "@angular/compiler-cli": "^4.3.4",
-    "@angular/core": "^4.3.4",
-    "@angular/forms": "^4.3.4",
-    "@angular/http": "^4.3.4",
-    "@angular/platform-browser": "^4.3.4",
-    "@angular/platform-browser-dynamic": "^4.3.4",
-    "@angular/router": "^4.3.4",
+    "@angular/animations": "^4.3.5",
+    "@angular/cli": "1.3.1",
+    "@angular/common": "^4.3.5",
+    "@angular/compiler": "^4.3.5",
+    "@angular/compiler-cli": "^4.3.5",
+    "@angular/core": "^4.3.5",
+    "@angular/forms": "^4.3.5",
+    "@angular/http": "^4.3.5",
+    "@angular/platform-browser": "^4.3.5",
+    "@angular/platform-browser-dynamic": "^4.3.5",
+    "@angular/router": "^4.3.5",
     "@angularclass/hmr": "^2.1.3",
     "@ngx-translate/core": "7.2.0",
     "@ngx-translate/http-loader": "1.0.2",
     "@types/bcrypt": "^1.0.0",
-    "@types/body-parser": "^1.16.4",
-    "@types/errorhandler": "0.0.30",
-    "@types/express": "^4.0.36",
-    "@types/jasmine": "2.5.53",
+    "@types/body-parser": "^1.16.5",
+    "@types/errorhandler": "0.0.31",
+    "@types/express": "^4.0.37",
+    "@types/jasmine": "2.5.54",
     "@types/jasminewd2": "~2.0.2",
-    "@types/mocha": "2.2.41",
+    "@types/mocha": "2.2.42",
     "@types/morgan": "^1.7.32",
-    "@types/node": "~8.0.22",
-    "@types/should": "^8.3.0",
-    "@types/supertest": "^2.0.2",
+    "@types/node": "~8.0.24",
+    "@types/should": "^11.2.0",
+    "@types/supertest": "^2.0.3",
     "angular-tree-component": "^4.1.0",
     "angular2-jwt": "^0.2.3",
     "angular2-notifications": "^0.7.7",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta",
     "compression": "^1.7.0",
     "config": "^1.26.2",
     "cookie-parser": "^1.4.3",
@@ -72,7 +72,7 @@
     "express": "^4.15.4",
     "express-validator": "^3.2.1",
     "font-awesome": "^4.7.0",
-    "jsonwebtoken": "^7.4.2",
+    "jsonwebtoken": "^7.4.3",
     "mongoose": "^4.11.7",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
@@ -87,18 +87,18 @@
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@angular/language-service": "^4.3.4",
+    "@angular/language-service": "^4.3.5",
     "@biesbjerg/ngx-translate-extract": "^2.3.2",
-    "@types/chai": "^4.0.3",
+    "@types/chai": "^4.0.4",
     "@types/chai-http": "3.0.2",
-    "@types/faker": "^4.1.0",
+    "@types/faker": "^4.1.1",
     "chai": "^4.1.1",
     "chai-http": "^3.0.0",
     "codelyzer": "~3.1.2",
     "concurrently": "^3.5.0",
     "faker": "^4.1.0",
     "jasmine-core": "~2.7.0",
-    "jasmine-spec-reporter": "~4.1.1",
+    "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
