--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,7 @@ before_test:
 
 test_script:
   # Output useful info for debugging.
-  - node --version && npm --version
+  - node --version && npm --version && ng --version
   # linting
   - npm run lint
   # Run tests
