chore: update travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ before_install:
   - sleep 5
 
 before_script:
-  - sleep 10
-  - mongo --shell test-storage install/db-init.js
+  - sleep 15
+  - mongo test-storage install/db-init.js
 
 script:
   # Output useful info for debugging.
