chore: update packages

--- a/package.json
+++ b/package.json
@@ -28,69 +28,70 @@
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e --no-progress --proxy-config proxy.conf.json",
     "build": "npm run client:build && npm run server:build",
+    "clean": "rimraf node_modules package-lock.json",
     "server:build": "tsc -p ./server",
     "client:build": "ng build --prod --aot",
     "extract": "ngx-translate-extract --input ./src --output ./i18n/*.json --clean --sort --format namespaced-json"
   },
   "dependencies": {
-    "@angular/animations": "^5.1.1",
-    "@angular/common": "^5.1.1",
-    "@angular/compiler": "^5.1.1",
-    "@angular/compiler-cli": "^5.1.1",
-    "@angular/core": "^5.1.1",
-    "@angular/forms": "^5.1.1",
-    "@angular/platform-browser": "^5.1.1",
-    "@angular/platform-browser-dynamic": "^5.1.1",
-    "@angular/router": "^5.1.1",
+    "@angular/animations": "^5.1.2",
+    "@angular/common": "^5.1.2",
+    "@angular/compiler": "^5.1.2",
+    "@angular/compiler-cli": "^5.1.2",
+    "@angular/core": "^5.1.2",
+    "@angular/forms": "^5.1.2",
+    "@angular/platform-browser": "^5.1.2",
+    "@angular/platform-browser-dynamic": "^5.1.2",
+    "@angular/router": "^5.1.2",
     "@angularclass/hmr": "^2.1.3",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
-    "@nestjs/common": "^4.5.1",
-    "@nestjs/core": "^4.5.1",
-    "@nestjs/microservices": "^4.5.1",
-    "@nestjs/testing": "^4.5.1",
-    "@nestjs/websockets": "^4.5.1",
+    "@nestjs/common": "^4.5.2",
+    "@nestjs/core": "^4.5.2",
+    "@nestjs/microservices": "^4.5.2",
+    "@nestjs/testing": "^4.5.2",
+    "@nestjs/websockets": "^4.5.2",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "2.0.0",
     "@types/bcrypt": "^1.0.0",
     "@types/jasmine": "^2.8.2",
     "@types/jasminewd2": "^2.0.3",
-    "@types/mocha": "2.2.44",
-    "@types/node": "~8.5.1",
+    "@types/mocha": "2.2.45",
+    "@types/node": "~8.5.2",
     "@types/supertest": "^2.0.4",
     "angular-tree-component": "^6.0.0",
-    "angular2-notifications": "^0.9.6",
+    "angular2-notifications": "^0.9.7",
     "bcrypt": "^1.0.3",
     "bootstrap": "^4.0.0-beta",
     "compression": "^1.7.1",
-    "config": "^1.28.1",
+    "config": "^1.29.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.3",
     "database-updates": "^2.0.0",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.1.0",
-    "mongoose": "^4.13.7",
+    "mongoose": "^4.13.8",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "ngx-bootstrap": "^2.0.0-rc.0",
     "ngx-clickout": "^1.0.2",
-    "nodemon": "^1.13.3",
+    "nodemon": "^1.14.3",
     "normalize-css": "^2.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.5.5",
+    "rxjs": "^5.5.6",
     "ts-node": "~3.3.0",
     "typescript": "~2.6.2",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.1",
-    "@angular/language-service": "^5.0.3",
+    "@angular/cli": "^1.6.2",
+    "@angular/language-service": "^5.1.2",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@nestjs/cli": "^1.8.0",
-    "@types/chai": "^4.0.5",
+    "@types/chai": "^4.0.10",
     "@types/chai-http": "3.0.3",
     "@types/config": "0.0.33",
     "@types/faker": "^4.1.2",
@@ -101,16 +102,17 @@
     "faker": "^4.1.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.3.3",
+    "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-typescript": "^3.0.8",
+    "karma-typescript": "^3.0.9",
     "mocha": "^4.0.1",
     "mockgoose": "^7.3.3",
-    "protractor": "~5.2.0",
+    "protractor": "~5.2.2",
+    "rimraf": "^2.6.2",
     "supertest": "^3.0.0",
     "tslint": "~5.8.0"
   }
